--- a/www/catalog.tmpl
+++ b/www/catalog.tmpl
@@ -39,8 +39,14 @@ under the License.
       <tbody>
         {{#large_tables}}
         <tr>
-          <td><a href="catalog_object?object_type=TABLE&object_name={{name}}">{{name}}</a>
-          </td>
+          {{?use_local_catalog}}
+            <td> {{name}} </td>
+          {{/use_local_catalog}}
+          {{^use_local_catalog}}
+            <td>
+              <a href="catalog_object?object_type=TABLE&object_name={{fqtn}}">{{name}}</a>
+            </td>
+          {{/use_local_catalog}}
           <td>{{mem_estimate}}</td>
           <td><a href="table_metrics?name={{name}}">{{name}}-metrics</a></td>
         </tr>
@@ -80,8 +86,14 @@ under the License.
       <tbody>
         {{#frequent_tables}}
         <tr>
-          <td><a href="catalog_object?object_type=TABLE&object_name={{name}}">{{name}}</a>
-          </td>
+          {{?use_local_catalog}}
+            <td> {{name}} </td>
+          {{/use_local_catalog}}
+          {{^use_local_catalog}}
+            <td>
+              <a href="catalog_object?object_type=TABLE&object_name={{fqtn}}">{{name}}</a>
+            </td>
+          {{/use_local_catalog}}
           <td>{{num_metadata_ops}}</td>
           <td><a href="table_metrics?name={{name}}">{{name}}-metrics</a></td>
         </tr>
@@ -112,10 +124,17 @@ under the License.
 
 <div class="panel panel-info">
   <div class="panel-heading">
-    <a href='catalog_object?object_type=DATABASE&object_name={{name}}' id='{{name}}'>
+    {{?use_local_catalog}}
       <h2 class="panel-title">{{name}}
-      <span class="pull-right">{{num_tables}} table(s)</span></h2>
-    </a>
+        <span class="pull-right">{{num_tables}} table(s)</span>
+      </h2>
+    {{/use_local_catalog}}
+    {{^use_local_catalog}}
+      <a href='catalog_object?object_type=DATABASE&object_name={{name}}' id='{{name}}'>
+        <h2 class="panel-title">{{name}}
+        <span class="pull-right">{{num_tables}} table(s)</span></h2>
+      </a>
+    {{/use_local_catalog}}
   </div>
   <div class="panel-body">
     <table id="{{name}}-tables" class='table table-hover table-bordered'>
@@ -130,8 +149,14 @@ under the License.
       <tbody>
         {{#tables}}
         <tr>
-          <td><a href="catalog_object?object_type=TABLE&object_name={{fqtn}}">{{name}}</a>
-          </td>
+          {{?use_local_catalog}}
+            <td> {{name}} </td>
+          {{/use_local_catalog}}
+          {{^use_local_catalog}}
+            <td>
+              <a href="catalog_object?object_type=TABLE&object_name={{fqtn}}">{{name}}</a>
+            </td>
+          {{/use_local_catalog}}
           {{?has_metrics}}
           <td><a href="table_metrics?name={{fqtn}}">{{name}}-metrics</a></td>
           {{/has_metrics}}
